2015-08-04  Carl Hetherington  <cth@carlh.net>

	* Disable "2D version of 3D content" ISDCF metadata
	checkbutton with 3D content (part of #652).

2015-07-30  c.hetherington  <cth@carlh.net>

	* Allow recreation of the certificate chain and key
	used for KDM decryption (#644).

2015-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.31 released.

2015-07-29  Carl Hetherington  <cth@carlh.net>

	* Fix "find missing" with DCP folders (#646).

	* Fix garbled audio from DCP sources when running
	on Windows.

2015-07-28  c.hetherington  <cth@carlh.net>

	* Stop forward-frame button going off the end of the film.

	* Notice when content is modified and offer to save the project
	on closing DCP-o-matic.

	* Recognise .w64 and .flac as audio files.

2015-07-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.30 released.

2015-07-27  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Version 2.1.29 released.

2015-07-27  Carl Hetherington  <cth@carlh.net>

	* Fix i18n for some messages.

2015-07-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.28 released.

2015-07-24  Carl Hetherington  <cth@carlh.net>

	* Fix problems when using large start trims relative
	to content length.

2015-07-22  Carl Hetherington  <cth@carlh.net>

	* Use NR for rating an in ISDCF name if none is specified.

2015-07-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.27 released.

2015-07-21  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect conversion of audio from DCP sources (#642).

2015-07-20  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.26 released.

2015-07-20  Carl Hetherington  <cth@carlh.net>

	* Fix missing second lines of subtitles in
	some cases (#641).

2015-07-19  Carl Hetherington  <cth@carlh.net>

	* Fix some missing set-to-defaults (#640).

	* Version 2.1.25 released.

2015-07-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.24 released.

2015-07-17  c.hetherington  <cth@carlh.net>
